fix header overflow text

--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ nav {
   width: 100%;
   grid-column: 1/3;
   font-size: 1.4rem;
+  padding-bottom: 15px;
 }
 
 .header-right-contents {
@@ -188,7 +189,7 @@ nav {
   width: 100%;
   grid-column: 1/3;
   font-size: 1.4rem;
-  padding: 10px;
+  padding: 15px;
 }
 
 .header-left-contents h2 {
@@ -969,7 +970,17 @@ nav {
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   .header-right-contents {
-    top: 35%;
+    top: 30%;
+    padding: 5px;
+    font-size: 80%;
+  }
+
+  .header-right-contents li {
+    font-size: 1.2rem;
+  }
+
+  .header-left-contents {
+    top: 25%;
   }
 
   .latest-news {
